2006-06-12  Corinna Vinschen  <corinna@vinschen.de>

	* include/sys/wait.h: Move definition of wait constants from here...
	* include/cygwin/wait.h: ...to here.  New file.
	* include/cygwin/stdlib.h: Include cygwin/wait.h to conform with SUSv3.

2006-06-12  Pierre Humblet  Pierre.Humblet@ieee.org

	* heap.cc (heap_init): Only commit if allocsize is not zero.

2006-06-12  Corinna Vinschen  <corinna@vinschen.de>

	* net.cc (fdsock): Disable raising buffer sizes.  Add comment to
	explain why.

2006-06-04  Christopher Faylor  <cgf@timesys.com>

	* ioctl.cc (ioctl): Accommodate change in reported pty master device
	number.
	* select.cc (peek_pipe): Ditto.

2006-06-04  Christopher Faylor  <cgf@timesys.com>

	* cygtls.h (CYGTLS_PADSIZE): Reset to a size that XP SP1 seems to like.
	* tlsoffsets.h: Regenerate.

2006-06-03  Christopher Faylor  <cgf@timesys.com>

	* cygthread.cc (cygthread::terminate_thread): In debugging output, use
	name of thread being terminated rather than thread doing the
	terminating.

	* fhandler.h (fhandler_pty_master::slave): Delete.
	(fhandler_pty_master::get_unit): Ditto.
	(fhandler_pty_master::setup): Change argument declaration to
	accommodate new usage.
	* fhandler_tty.cc (fhandler_tty_master::init): Remove obsolete slave
	assignment.  Pass argument to setup indicating that this is a tty.
	(fhandler_tty_slave::open): Use dev() method rather than referencing
	pc.dev directly.
	(fhandler_pty_master::open): Don't create archetype based on ptym
	device number.  Set device number to use DEV_TTYM_MAJOR and tty number.
	Pass argument to setup indicating that this is a pty.
	(fhandler_pty_master::setup): Change single argument to a flag
	indicating whether we're creating a pty and use appropriately.
	Calculate 't' variable here rather than in caller.

	* fhandler_dsp.cc (fhandler_dev_dsp::open): Use dev() method rather
	than referencing pc.dev directly.

2006-06-03  Christopher Faylor  <cgf@timesys.com>
