@@ -1166,18 +1166,12 @@ fhandler_pty_master::close ()
     }
 
   fhandler_tty_master *arch = (fhandler_tty_master *) archetype;
-  if (arch->dwProcessId != GetCurrentProcessId ())
-    termios_printf ("not closing from_master(%p)/to_master(%p) since we don't own them(%d)",
-		    arch->from_master, arch->to_master, arch->dwProcessId);
-  else
-    {
-      termios_printf ("closing from_master(%p)/to_master(%p) since we own them(%d)",
-		      arch->from_master, arch->to_master, arch->dwProcessId);
-      if (!ForceCloseHandle (arch->from_master))
-	termios_printf ("error closing from_master %p, %E", arch->from_master);
-      if (!ForceCloseHandle (arch->to_master))
-	termios_printf ("error closing from_master %p, %E", arch->to_master);
-    }
+  termios_printf ("closing from_master(%p)/to_master(%p) since we own them(%d)",
+		  arch->from_master, arch->to_master, arch->dwProcessId);
+  if (!ForceCloseHandle (arch->from_master))
+    termios_printf ("error closing from_master %p, %E", arch->from_master);
+  if (!ForceCloseHandle (arch->to_master))
+    termios_printf ("error closing from_master %p, %E", arch->to_master);
   fhandler_tty_common::close ();
 
   if (hExeced || get_ttyp ()->master_pid != myself->pid)
