@@ -1,3 +1,8 @@
+2006-06-12  Christopher Faylor  <cgf@timesys.com>
+
+	* fhandler_tty.cc (fhandler_pty_master::close): Always close
+	from_master/to_master since we always have copies of these handles.
+
 2006-06-12  Corinna Vinschen  <corinna@vinschen.de>
 
 	* include/sys/wait.h: Move definition of wait constants from here...
